test/libsolidity/syntaxTests/nameAndTypeResolution/519_experimental_pragma_empy_string_literal.sol
pragma experimental "";
// ----
// SyntaxError 3250: (0-23): Empty experimental feature name is invalid.
